# blake-hash

./: .denolint.json  .gitattributes  .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  bench-next.mjs  bench.mjs  index.d.ts  index.js  package.json  rust-toolchain
.cargo/: config.toml
.github/workflows/: CI.yml  lint.yml
__test__/: blake2.spec.ts  blake3.spec.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: blake2_params.rs  lib.rs
