[package]
edition = "2021"
name = "blake_hash_napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13"
blake2b_simd = "1.0"
blake2s_simd = "1.0"
blake3 = "1"
hex = "0.4"
napi = "2"
napi-derive = "2"
ryu = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto = true
